2002-11-25  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/signalutils.{cc,h}: New files containing various sigc++
	related utilities.  For now, there's only Util::QueuedSignal,
	which implements a SigC::Signal0<void> that is emitted when the
	main loop is idle.

	* src/Makefile.am (regexxer_SOURCES): Add signalutils.{cc,h}.

2002-11-25  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.{cc,h} (trigger_preview_line_changed): Rename to
	queue_preview_line_changed() because that's what it does.

2002-11-25  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.cc (pango_context_changed): Ooops, I accidentally
	reversed the arguments to Gtk::IconSize::lookup().  Fixed.

2002-11-23  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.{cc,h} (FileTree::ScopedBlockSorting): Introduce new
	utility class used to temporarily disable the column headers and to
	switch to the default sort column if the current one is the match
	count column.  This is necessary because Gtk::TreeModel::foreach()
	doesn't like it at all if model rows are reordered underneath its
	feet.  regexxer didn't handle that correctly until now, and the only
	reason this bug hasn't been observed before is #96647 :)

2002-11-23  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.{cc,h} (FileTree::ErrorList): Rename to MessageList
	since it's not specifically intended for errors.  Use MI to combine
	Util::SharedObject and std::list<> instead of making the std::list
	a data member.  IS-A really makes sense here and this kind of class
	enhancement is what MI exists for, after all.

2002-11-22  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/Makefile.am (DEFS): Don't use backslash quoting inside the
	double-quoted string.  Rather, quote the outer pair of double-
	quotes with backslashes.  I reckon it's more portable not to use
	backslash quoting inside double-quoted strings since most other
	packages seem to avoid it too.

2002-11-20  Daniel Elstner  <daniel.elstner@gmx.net>
